--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
                 <select id="wood" name="wood">
                     <option value="roble">Roble</option>
                     <option value="tejo">Tejo</option>
-                    <option value="sauce">Sauce</option>
+                    <option value="sauce">Saúco</option>
                     <option value="abeto">Abeto</option>
+                    <option value="abeto">Acacia</option>
+                    <option value="abeto">Cornejo</option>
+                    <option value="abeto">Serbal</option>
                 </select>
 
                 <label for="core">Núcleo:</label>
