--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <option value="pelo">Pelo de Thestral</option>
                     <option value="escama">Escama de Dragón</option>
                     <option value="peloUnicornio">Pelo de Unicornio</option>
-                    <option value="plumaBasilisco">Pluma de Basilisco</option>
+                    <option value="plumaBasilisco">Escama de Basilisco</option>
                 </select>
 
                 <label for="length">Longitud (en cm):</label>
