--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
             <form id="wandForm">
                 <label for="wood">Madera:</label>
                 <select id="wood" name="wood">
-                    <option value="roble">Roble</option>
-                    <option value="tejo">Tejo</option>
-                    <option value="sauce">Saúco</option>
-                    <option value="abeto">Abeto</option>
-                    <option value="abeto">Acacia</option>
-                    <option value="abeto">Cornejo</option>
-                    <option value="abeto">Serbal</option>
+                    <option value="Roble">Roble</option>
+                    <option value="Tejo">Tejo</option>
+                    <option value="Saúco">Saúco</option>
+                    <option value="Abeto">Abeto</option>
+                    <option value="Acacia">Acacia</option>
+                    <option value="Cornejo">Cornejo</option>
+                    <option value="Serbal">Serbal</option>
                 </select>
 
                 <label for="core">Núcleo:</label>
                 <select id="core" name="core">
-                    <option value="pluma">Pluma de Fénix</option>
-                    <option value="pelo">Pelo de Thestral</option>
-                    <option value="escama">Escama de Dragón</option>
-                    <option value="peloUnicornio">Pelo de Unicornio</option>
-                    <option value="plumaBasilisco">Escama de Basilisco</option>
+                    <option value="Pluma de Fenix">Pluma de Fénix</option>
+                    <option value="Pelo de Thestral">Pelo de Thestral</option>
+                    <option value="Escama de Dragon">Escama de Dragón</option>
+                    <option value="Pelo de Unicornio">Pelo de Unicornio</option>
+                    <option value="Escama de Basilisco">Escama de Basilisco</option>
                 </select>
 
                 <label for="length">Longitud (en cm):</label>
@@ -39,10 +39,10 @@
 
                 <label for="decorations">Adornos:</label>
                 <select id="decorations" name="decorations">
-                    <option value="nada">Ninguno</option>
-                    <option value="gemas">Gemas</option>
-                    <option value="maderaTallada">Madera Tallada</option>
-                    <option value="oro">Detalles en Oro</option>
+                    <option value="Nada">Ninguno</option>
+                    <option value="Gemas">Gemas</option>
+                    <option value="Madera Tallada">Madera Tallada</option>
+                    <option value="Oro">Detalles en Oro</option>
                 </select>
 
                 <button type="button" onclick="createWand()">Generar Varita</button>
